clean up and rename